--- a/css/styles.css
+++ b/css/styles.css
@@ -59,3 +59,108 @@
     clear: both;
 }
 
+/******Main********/
+main{
+    margin-bottom: 25px;
+}
+.titulo-principal{
+    text-align: center;
+    font-size: 40px;
+    color: var(--color-primario);
+    padding: 20px 0;
+}
+.subtitulo{
+    color:var(--color-secundario);
+    margin-bottom:25px;
+
+}
+.articles{
+    float: left;
+    width: 65%;
+}
+article{
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+#parrafo{
+    color: var(--color-oscuro);
+    font-size: 20px;
+    font-family: Arial;
+    line-height: 1.6;
+    text-align: justify;
+    margin-bottom: 20px;
+}
+
+.imagen-tarjeta{
+    width: 350px;
+    float: left;
+    margin-right: 25px;
+}
+
+.link{
+    background-color: var(--color-primario);
+    color:var(--color-claro);
+    text-decoration: none;
+    padding: 10px 35px;
+    border-radius: 5px;
+}
+
+.link:hover{
+    background-color: var(--color-hover);
+}
+
+/*
+
+selector:pseudo...
+*/
+
+.centrado{
+    text-align: center;
+    font-size: 35px;
+}
+
+.contenedor{
+    width: 85%;
+
+    margin:0px auto;
+}
+
+#video{
+    width: 850px;
+    display: block;
+    margin: 0 auto;
+}
+
+
+
+/*Aside*/
+.aside{
+    width: 30%;
+    float: right;
+}
+
+.aside-imagen{
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.aside-listas{
+    list-style-type: none;
+    list-style-image: url(../img/check.png);
+    list-style-position: inside;
+}
+.aside-lista{
+    margin-bottom: 15px;
+}
+
+.aside-lista a{
+    text-decoration: none;
+    color:var(--color-primario);
+    font-size: 20px;
+    text-transform: uppercase;
+    font-family: Arial;
+}
+
+.limpiar{
+    clear: both;
+}
